[package]
name = "glubhub-yew"
version = "0.1.0"
authors = ["Sam Mohr <sam.mohr@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = "1"
md5 = "0.7"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
wasm-bindgen-futures = "0.4"
web-sys = "*"
ybc = "0.2"
yew = "0.19"
yew-router = "0.16"
