[package]
name = "glubhub"
version = "0.1.0"
authors = ["Sam Mohr <sam.mohr@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = "1"
dioxus = { version = "0.2", features = ["web", "router", "fermi"] }
md5 = "0.7"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
